# xrp

./: .gitmodules  Makefile  Makefile.am  Makefile.in  Makefile.src  README  README.xrp_porting  aclocal.m4  configure  configure.ac  main.c  rebuild.sh  run_dsp  run_host  xrp_api.h  xrp_linux.c
doc/: Makefile  Makefile.in  (+8 more)
test-xrp/: CMakeLists.txt  dsp_main.c  example_namespace.h  xrp_api.h  xrp_dsp_hw.h  xrp_dsp_hw_dct.c  xrp_hw_dct_dsp_interface.h
test-xrp/lsp/: sdip.map  sdip.parms
test-xrp/min-rt/: memmap.xmm  specs
xrp-dsp/: Makefile  Makefile.am  Makefile.in  README.porting  xrp_dsp.c  xrp_dsp_framework.c  xrp_dsp_hw.h  xrp_dsp_hw_simple.c  xrp_dsp_interrupt.h  xrp_dsp_sync.h  xrp_dsp_user.h
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/gdbio/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/gdbio-rom/: memmap.xmm  specs
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/min-rt/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/min-rt-rom/: min-rt-rom.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/nort/: nort.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-ram/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-ramp/: rtos-ramp.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-rom/: rtos-rom.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/sim/: sim.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/sim-rom/: memmap.xmm  sim-rom.parm  specs
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/tiny/: memmap.xmm  specs
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/tiny-rom/: memmap.xmm  tiny-rom.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav110-rt/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav110-rt-rom/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav200-rt/: memmap.xmm  specs  xtav200-rt.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav200-rt-rom/: memmap.xmm  specs
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav60-rt/: xtav60-rt.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav60-rt-rom/: memmap.xmm  xtav60-rt-rom.parm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtkc705-rt/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtkc705-rt-rom/: specs
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtml605-rt/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtml605-rt-rom/: memmap.xmm
xrp-dsp/IVP_D233L_SNY_Subsystem/xtsc-run/: IVP0_outbound_pif_rte.tab  IVP0_udma_rte.tab  mmio.def  sim_cntrl.lua  xtsc.inc
xrp-dsp/MW-MP/xtsc-run/: Host.inc  Host_inbound_rte.tab  Host_mmio.def  P6_0.inc  P6_0_inbound_rte.tab  P6_0_mmio.def  P6_1.inc  P6_1_inbound_rte.tab  P6_1_mmio.def  SubSystem.inc  SubSystem.logger.txt  TestBenchMaster.vec  TestBenchMaster.vec-  bus_rte.tab  sim_cntrl.lua  xtsc.inc
xrp-dsp/hikey960/: Makefile.am  Makefile.in  xrp_dsp_hw_hikey960.c
xrp-dsp/simple/: Makefile.am  Makefile.in  xrp_dsp_hw_simple.c
xrp-dsp/simple-xos/: Makefile.am  Makefile.in  xrp_dsp_hw_simple-xos.c
xrp-example/: Makefile  Makefile.am  Makefile.common  Makefile.in  README.md  dsp_main.c  dsp_test.c  example_namespace.h  host_main.c  linux_main.c  sdip-xrp.dtsi  xrp-host-standalone.sh  xrp.dts  xrp_dtb.s
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/gdbio/: gdbio.parm  specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/gdbio-rom/: gdbio-rom.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/min-rt/: min-rt.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/min-rt-local/: memmap.xmm  specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/min-rt-rom/: memmap.xmm  specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/ngo-sample-gdbio/: memmap.xmm  ngo-sample-gdbio.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/nort/: memmap.xmm  specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/nort-rom/: memmap.xmm  nort-rom.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/piload/: specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-ram/: rtos-ram.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-ramp/: memmap.xmm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-res/: memmap.xmm  rtos-res.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/rtos-rom/: memmap.xmm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/sim/: memmap.xmm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/sim-local/: memmap.xmm  specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/tiny/: tiny.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/tiny-rom/: specs
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav110-rt/: specs  xtav110-rt.parm
xrp-example/IVP_D233L_SNY_Subsystem/LSP_IVP0/xtav110-rt-rom/: specs  xtav110-rt-rom.parm
xrp-example/IVP_D233L_SNY_Subsystem/xtsc-run/: TextLogger.txt  bus_rte.tab
xrp-example/MW-MP/xtsc-run/: P6_0_inbound_rte.tab  P6_1_inbound_rte.tab  bus_rte.tab
xrp-example/hikey960/: memmap.xmm  min-rt.parm  specs
xrp-example/hikey960/ldscripts/: elf32xtensa.x  elf32xtensa.xbn  elf32xtensa.xn  elf32xtensa.xr  elf32xtensa.xu
xrp-example/rtos-hosted/: FreeRTOSConfig.h  Makefile  Makefile.attr  README.md  host_main_freertos.c  subsys-rtos-hosted.xld  subsys-rtos-hosted.yml  xrp_host_freertos.c
xrp-example/vp6-mp/: subsys.xtsys
xrp-example/vp6-mp/native/: README  vp6_mp_xrp.dts
xrp-example/vp6-mp/sim/: README  xrp.dts
xrp-example2/: CMakeLists.txt  Makefile  README.txt  env.sh  xrp.dtb.s
xrp-example2/src/: Makefile  dsp.c  host.c  run_prologue.sh
xrp-example2/xrp_standalone/: CMakeLists.txt
xrp-host/: Makefile.am  Makefile.in  xrp_atomic.h  xrp_host_common.c  xrp_host_common.h  xrp_sync_queue.c  xrp_sync_queue.h  xrp_threaded_queue.c  xrp_threaded_queue.h
xrp-host/hosted/: xrp_host_impl.h  xrp_hosted.c  xrp_linux.c
xrp-host/native/: xrp_host_impl.h  xrp_linux_native.c
xrp-host/sim/: cdns,sim-shmem.txt  xrp_host_sim.c  xrp_linux_sim.c
xrp-host/single/: xrp_host_impl.h  xrp_single.c
xrp-host/standalone/: xrp_alloc.c  xrp_elf.c  xrp_host.c  xrp_host.h  xrp_host_impl.h  xrp_linux.c
xrp-host/thread-freertos/: xrp_queue_impl.h  xrp_thread_impl.h
xrp-host/thread-pthread/: xrp_thread_impl.h
xrp-host/thread-single/: xrp_queue_impl.h  xrp_thread_impl.h
xrp-host/thread-xos/: xrp_queue_impl.h  xrp_thread_impl.h
(+929 files in other folders)
